tooling/nargo_cli/tests/snapshots/execution_failure/regression_8229/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: Return variable contains a constant value
  ┌─ src/main.nr:8:5
  │
8 │     false
  │     ----- This variable contains a value which is constrained to be a constant. Consider removing this value as additional return values increase proving/verification time
  │
  = Call stack:
    1. src/main.nr:8:5

error: Assertion failed: attempt to multiply with overflow
  ┌─ src/main.nr:4:10
  │
4 │         (input * G_B) as u64
  │          -----------
  │
  = Call stack:
    1. src/main.nr:4:10

Failed assertion
