tooling/nargo_cli/tests/snapshots/execution_failure/regression_8229/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: attempt to multiply with overflow
  ┌─ src/main.nr:4:10
  │
4 │         (input * G_B) as u64
  │          -----------
  │
  = Call stack:
    1. src/main.nr:4:10

Failed assertion
