tooling/nargo_cli/tests/snapshots/execution_failure/regression_8229/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Attempt to multiply with overflow
  ┌─ src/main.nr:4:10
  │
4 │         (input * G_B) as u64
  │          -----------
  │

Error interpreting main function
